# S.L.O.T.H

./: .gitignore  .prettierrc  README.md  TODO.md  eslint.config.mjs  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
apps/backend/api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  moon.yml  pyproject.toml
apps/backend/api/scripts/: prestart.sh
apps/backend/api/src/: initial_data.py  main.py  sql_prestart.py
apps/backend/api/src/alembic/: env.py
apps/backend/api/src/alembic/versions/: 7dbcdd48ec01_create_user_tables.py
apps/backend/api/src/api/: deps.py  exceptions.py  main.py  utils.py
apps/backend/api/src/api/routes/: cache.py  login.py  schemas.py  users.py  validation.py
apps/backend/api/src/controllers/: users.py  utils.py
apps/backend/api/src/core/: config.py  database_client.py  database_mongo.py  database_redis.py  database_sql.py  init_db.py  security.py
apps/backend/api/src/messaging/: connection_factory.py  publisher.py  publishers.py
apps/backend/api/src/models/: __init__.py  user_info.py  user_roles.py
apps/backend/api/src/schemas/: __init__.py  api.py  messaging.py  models.py  token.py  users.py
apps/backend/api/src/utils/: uvicorn_logger.py
apps/backend/benchmarks/: pyproject.toml  testing_typechecking.ipynb
apps/backend/benchmarks/data/csv/rows-1000/: data_rows-1000_columns-300.csv  schema_rows-1000_columns-700.json
apps/backend/benchmarks/data/excel/: results_columns-100_iterations-20_workers-1_full-True_formulas-30.csv
apps/backend/benchmarks/data/excel/columns-100/: data_rows-1000_columns-100.xlsx  data_rows-5000_columns-100.xlsx
apps/backend/benchmarks/data/excel/rows-1000/: data_rows-1000_columns-200.xls  data_rows-1000_columns-200.xlsx  schema_rows-1000_columns-300.json  schema_rows-1000_columns-600.json
apps/backend/parsers/ddl-generator/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  moon.yml  pyproject.toml
apps/backend/parsers/ddl-generator/src/: client.py  server.py
apps/backend/parsers/ddl-generator/src/clients/: dtypes_pb2.pyi
apps/backend/parsers/ddl-generator/src/core/: config.py
apps/backend/parsers/ddl-generator/src/handlers/: ddl_generator.py
apps/backend/parsers/ddl-generator/src/services/: ddl_generator.py  dtypes.py  generator.py  sql.py  utils.py
apps/backend/parsers/ddl-generator/src/utils/: logger.py
apps/backend/parsers/ddl-generator/tests/core/: test_config.py
apps/backend/parsers/ddl-generator/tests/services/: test_generator.py  test_sql.py  test_utils.py
apps/backend/parsers/excel-reader/: .env.example  .gitignore  Dockerfile  README.md  moon.yml  pyproject.toml
apps/backend/parsers/excel-reader/scripts/: ddl_generator_clients.sh  dtypes_clients.sh  sql_builder_clients.sh
apps/backend/parsers/excel-reader/src/: main.py  server_rest.py
apps/backend/parsers/excel-reader/src/core/: config.py
apps/backend/parsers/excel-reader/src/services/: dtypes.py  get_data.py  utils.py
apps/backend/parsers/sql-builder/: .env.example  .gitignore  Dockerfile  README.md  moon.yml  pyproject.toml
apps/backend/parsers/sql-builder/src/: client.py  server.py
apps/backend/parsers/sql-builder/tests/: test_.py
apps/backend/typechecking/: .env.example  .gitignore  Dockerfile  README.md  moon.yml  pyproject.toml  supervisord.conf
apps/backend/typechecking/backend/: .gitignore
apps/backend/typechecking/backend/tests/: testing_typechecking.ipynb
apps/backend/typechecking/src/: main.py  minimal_server.py
apps/backend/typechecking/src/core/: config.py  database_client.py  database_mongo.py  database_redis.py
apps/backend/typechecking/src/handlers/: schemas.py  validation.py
apps/backend/typechecking/src/messaging/: connection_factory.py
apps/backend/typechecking/src/schemas/: handlers.py  messaging.py  services.py  workers.py
apps/backend/typechecking/src/services/: file_processor.py  healthcheck.py
apps/backend/typechecking/src/utils/: __init__.py  logger.py  uvicorn_logger.py
apps/backend/typechecking/src/workers/: schema.py  schemas.py  utils.py  validation.py
apps/backend/typechecking/tests/: conftest.py  test_minimal_server.py
apps/backend/typechecking/tests/handlers/: __init__.py  test_schemas.py  test_validation.py
apps/backend/typechecking/tests/services/: test_file_processor.py  test_healthcheck.py
apps/backend/typechecking/tests/workers/: __init__.py  test_schemas.py  test_validation.py
apps/connections/database/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  moon.yml  pyproject.toml
apps/connections/database/scripts/: tests.sh
apps/connections/database/src/: server.py
apps/connections/database/src/core/: config.py  connection_manager.py  database_factory.py  database_mongo.py  database_redis.py
apps/connections/database/src/handlers/: __init__.py  base.py  mongo.py  mongo_handler.py  redis.py  redis_handler.py  tasks.py  tasks_handler.py
apps/connections/database/src/services/: mongo.py  redis.py  tasks.py
apps/connections/database/src/utils/: logger.py
apps/connections/database/tests/: conftest.py  test_grpc_server_resilience.py  test_handler_resilience.py  test_server_integration.py
apps/connections/database/tests/services/: test_mongo.py  test_redis.py  test_tasks.py
apps/connections/messaging/: .env.example  .gitignore  README.md  moon.yml  pyproject.toml  test_client.py
apps/connections/messaging/src/: __init__.py  server.py
apps/connections/messaging/src/core/: __init__.py  config.py  connection_params.py
apps/connections/messaging/src/handlers/: __init__.py  services.py  workers.py
apps/connections/messaging/src/services/: __init__.py  params.py
apps/connections/messaging/src/utils/: __init__.py  logger.py
apps/connections/messaging/src/workers/: schemas.py  validation.py  worker.py
apps/connections/messaging/tests/: conftest.py  test_integration.py  test_server.py
apps/connections/messaging/tests/services/: test_config.py  test_params.py
apps/connections/messaging/tests/workers/: test_schemas.py  test_validation.py
iac/: moon.yml  (+2 more)
(+415 files in other folders)
