[project]
name = "api"
version = "0.1.0"
description = "API layer to communicate with backend services"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "proto-utils",
    "aio-pika>=9.5.5",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "jsonschema>=4.24.0",
    "motor>=3.7.1",
    "numpy>=2.3.1",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.13.2",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
]

[tool.uv.sources]
proto-utils = { path = "../../../packages/proto-utils/proto-utils-py", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.0",
]


