[project]
name = "benchmarks"
version = "0.1.0"
description = "Benchmarks for the backend app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
]
