[project]
name = "typechecking"
version = "0.1.0"
description = "RabbitMQ consumer for typechecking tasks"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "aio-pika>=9.5.7",
    "fastapi>=0.116.1",  # For type hints
    "jsonschema>=4.25.1",
    "motor>=3.7.1",
    "pika>=1.3.2",
    "polars>=1.32.3",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.1",
    "pytest>=8.4.1",
    "redis>=6.4.0",
    "ruff>=0.12.11",
]
