[project]
name = "typechecking"
version = "0.1.0"
description = "RabbitMQ consumer for typechecking tasks"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "proto-utils",
    "messaging-utils",
    "aio-pika>=9.5.7",
    "fastapi>=0.116.1",
    "jsonschema>=4.25.1",
    "motor>=3.7.1",
    "pika>=1.3.2",
    "polars>=1.32.3",
    "pydantic-settings>=2.10.1",
    "openpyxl>=3.1.5",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
proto-utils = { path = "../../../packages/proto-utils/proto-utils-py", editable = true }
messaging-utils = { path = "../../../packages/messaging-utils/messaging-utils-py", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.0",
    "xlsxwriter>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 80
target-version = "py312"
extend-select = ["I"]
