[project]
name = "database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "proto-utils",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.15.0",
    "redis>=6.4.0",
]

[tool.uv.sources]
proto-utils = { path = "../../../packages/utils/python", editable = true }
