[project]
name = "messaging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.7",
    "pika>=1.3.2",
    "proto-utils",
    "messaging-utils",
    "pydantic-settings>=2.10.1",
]

[tool.uv.sources]
proto-utils = { path = "../../../packages/proto-utils/proto-utils-py", editable = true }
messaging-utils = { path = "../../../packages/messaging-utils/messaging-utils-py", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 80
target-version = "py312"
lint.extend-select = ["I"]
