[project]
name = "messaging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "proto-utils",
    "messaging-utils",
    "pydantic-settings>=2.10.1",
]

[tool.uv.sources]
proto-utils = { path = "../../../packages/proto-utils/proto-utils-py", editable = true }
messaging-utils = { path = "../../../packages/messaging-utils/messaging-utils-py", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 80
target-version = "py312"
lint.extend-select = ["I"]

[tool.pytest.ini_options]
addopts = [
    "--cov=src", 
    "--cov-report=html", 
    "--cov-report=xml", 
    "--cov-report=term-missing",
    "-v",                    # Verbose output
    "--tb=short",            # Short traceback format
    "--strict-markers",      # Strict marker enforcement
    "-ra",                   # Show summary of all results
]
testpaths = ["tests"]
python_files = ["test_*.py"]

markers = [
    "unit: Unit tests - fast, isolated tests",
    "integration: Integration tests - require external services", 
    "slow: Slow tests that take more than 1 second",
    "async: Asynchronous tests using asyncio"
]

asyncio_mode = "auto"

# Default timeout for tests (seconds)
timeout = 30
