[project]
name = "ddl-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "asyncio>=3.4.3",
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.ruff]
line-length = 80
target-version = "py312"
extend-select = ["I"]

