[project]
name = "ddl-generator"
version = "0.1.0"
description = "A Python gRPC service that converts Excel formula Abstract Syntax Trees (AST) into SQL expressions. This service is responsible for translating the hierarchical structure of Excel formulas into equivalent SQL statements that can be used in database queries."
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "asyncio>=4.0.0",
    "proto-utils",
    "pydantic-settings>=2.11.0"
]

[tool.uv.sources]
proto-utils = { path = "../../../../packages/proto-utils/proto-utils-py", editable = true }


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 80
target-version = "py312"
lint.extend-select = ["I"]
