[project]
name = "excel-reader"
version = "0.1.0"
description = "A FastAPI-based REST service that serves as the main entry point for the Excel Parsing system. This service processes Excel files, extracts formulas and data, and orchestrates communication with other microservices to generate SQL statements."
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "proto-utils",
    "fastapi[standard]>=0.116.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
]

[tool.uv.sources]
proto-utils = { path = "../../../../packages/proto-utils/proto-utils-py", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.ruff]
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".venv"
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
