[project]
name = "sql-builder"
version = "0.1.0"
description = "A Python gRPC service that constructs complete SQL statements from individual DDL expressions and column metadata. This service is responsible for assembling final CREATE TABLE and INSERT statements by managing dependencies and execution order of SQL expressions."
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "asyncio>=3.4.3",
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "igraph>=0.11.9",
    "pydantic-settings>=2.10.1",
    "sqlglot>=26.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.ruff]
line-length = 80
target-version = "py312"
extend-select = ["I"]

